# platform-2d-ecs

./: .gitmodules  CMakeLists.txt  CMakePresets.json  README.MD
cmake/: boost-integration.cmake
simple-2d/: CMakeLists.txt
simple-2d/include/simple-2d/: audio.h  camera.h  component.h  core.h  entity.h  error_type.h  generic_types.h  geometry.h  graphics.h  scene.h  utils.h
simple-2d/include/simple-2d/components/: animated_sprite.h  behavior_script.h  collision_body.h  config.h  downward_gravity.h  json.h  motion.h  platform_player.h  static_repetitive_sprite.h  static_sprite.h
simple-2d/src/: audio.cpp  camera.cpp  component.cpp  core.cpp  entity.cpp  geometry.cpp  graphics.cpp  internal_utils.cpp  internal_utils.h  scene.cpp
simple-2d/src/components/: animated_sprite.cpp  behavior_script.cpp  collision_body.cpp  downward_gravity.cpp  json.cpp  motion.cpp  platform_player.cpp  static_repetitive_sprite.cpp  static_sprite.cpp
src/: enemy.cpp  enemy.h  ground.cpp  ground.h  main.cpp  player.cpp  player.h
